Resurrecting SFBugs tests and fixing issues they uncovered